# Flowibi

./: CMakeLists.txt  index.html
.github/workflows/: deploy-pages.yml
qml/: BackgroundDots.qml  ContactPane.qml  CustomStackView.qml  GalleryPane.qml  HeaderBar.qml  HomePane.qml  ImageCard.qml  Main.qml  SidebarNavigation.qml  SocialPane.qml
qml/Singletons/: Common.qml
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc
resources/images/: images.qrc
src/: main.cpp
